Margatsni/static/style.css
@media screen and (min-width:10px) and (max-width:640px) {
    .leftSideBar {
        display: block;
    }
    .rightSideBar {
        display: block;
    }
}

a {
    color: inherit;
    text-decoration: none;
}

body {
    color: #fff;
    background: linear-gradient(270deg, #8a3ab9, #4c68d7, #cd486b, #fbad50, #fccc63, #bc2a8d, #e95950);
    background-size: 1400% 1400%;
    -webkit-animation: AnimationName 30s ease infinite;
    -moz-animation: AnimationName 30s ease infinite;
    animation: AnimationName 30s ease infinite;

    min-height: 400px;
    margin-bottom: 100px;
    clear: both;
}

@-webkit-keyframes AnimationName {
    0% {
        background-position: 0% 50%
    }
    50% {
        background-position: 100% 50%
    }
    100% {
        background-position: 0% 50%
    }
}

@-moz-keyframes AnimationName {
    0% {
        background-position: 0% 50%
    }
    50% {
        background-position: 100% 50%
    }
    100% {
        background-position: 0% 50%
    }
}

@keyframes AnimationName {
    0% {
        background-position: 0% 50%
    }
    50% {
        background-position: 100% 50%
    }
    100% {
        background-position: 0% 50%
    }
}

p {
    text-align: center;
}

input[type=text] {
    width: 75%;
    padding: 12px 20px;
    margin: 8px 0;
    display: inline-block;
    border: 1px solid #ccc;
    border-radius: 30px;
    box-sizing: border-box;
    text-align: center;
    outline: none !important;
}

input[type=username],
input[type=password] {
    width: 80%;
    padding: 12px 20px;
    margin: 8px 0;
    display: inline-block;
    border: 1px solid #ccc;
    border-radius: 30px;
    box-sizing: border-box;
    text-align: center;
    outline: none !important;
}

footer {
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
}


/* CSS for classes */

.title {
    color: white;
    text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
    font-size: 60px;
    font-family: 'Sofia', cursive;
    text-align: center;
    padding-top: 50px;
    padding-bottom: 50px;
}

.button {
    display: block;
    width: 300px;
    margin: 10px auto;
    font: normal 16px sans-serif;
    font-size: 25px;
    outline: none;
    color: white;
    border: none;
    text-align: center;
    cursor: pointer;
    background-color: #292c2f;
    border-radius: 30px;
}

.login {
    height: 200px;
    width: 400px;
    background: relative;
    display: block;
    width: 35%;
    margin: 10px auto;
    font-family: "Domine", cursive;
    font-size: 25px;
    outline: none;
    color: white;
    border: none;
    text-align: center;
    border-radius: 30px;
}

.container {
    margin: 10px auto;
    text-align: center;
}

.hellomsg {
    text-align: inherit;
    font-size: 20px;
}

.flashes {
    text-align: inherit;
}


/* Style the tab */

div.tab {
    overflow: hidden;
    border: 1px solid #ccc;
    background-color: #292c2f;
}


/* Style the buttons inside the tab */

div.tab button {
    background-color: inherit;
    float: left;
    border: none;
    outline: none;
    cursor: pointer;
    padding: 14px 16px;
    transition: 0.3s;
    font-size: 17px;
    color: white;
}


/* Change background color of buttons on hover */

div.tab button:hover {
    background-color: #3d4144;
}


/* Create an active/current tablink class */

div.tab button.active {
    background-color: #181a1c;
}


/* Style the tab content */

.tabcontent {
    text-align: center;
    font-size: 17px;
    display: none;
    padding: 6px 6px 12px 12px;
    border: 1px solid #ccc;
    border-top: none;
    background-color: #292c2f;
    height: 100%;
    margin: 0;
}

.help-photos {
    padding-bottom: 20px;
    display: block;
    margin: 0 auto;
    max-height: 100%;
    max-width: 100%;
}


/*----------------------------------- CSS for footer -----------------------------------------*/

.footer-distributed {
    background-color: #292c2f;
    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
    box-sizing: border-box;
    width: 100%;
    text-align: left;
    font: normal 16px sans-serif;

    padding: 20px 20px;
    margin-top: 80px;
}

.footer-distributed .footer-left p {
    color: #8f9296;
    font-size: 14px;
    margin: 0;
}


/* Footer links */

.footer-distributed p.footer-links {
    font-size: 14px;
    font-weight: bold;
    color: #ffffff;
    margin: 0 0 5px;
    padding: 0;
}

.footer-distributed p.footer-links a {
    display: inline-block;
    line-height: 1.8;
    text-decoration: none;
    color: inherit;
}

